搜索引擎接入

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,14 @@
         "blevesearch",
         "byts",
         "cacher",
+        "Catid",
         "dede",
         "errcode",
         "filemanager",
         "gktemplate",
         "interp",
         "pinecms",
+        "roleid",
         "sess",
         "Sess",
         "tcell",
