--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "blevesearch",
         "byts",
         "cacher",
+        "Casbin",
         "Catid",
         "dede",
         "errcode",
