优化内存占用

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "filemanager",
         "gktemplate",
         "interp",
+        "pbigcache",
         "pinecms",
         "roleid",
         "sess",
